# stackable-cockpit

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .yamllint.yaml  Cargo.nix  Cargo.toml  Makefile  README.md  Tiltfile  bors.toml  build.rs  crate-hashes.json  default.nix  deny.toml  go.mod  go.sum  gomod2nix.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix
.cargo/: config.toml
.githooks/: pre-commit
.github/: actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  config.yml.j2
.github/workflows/: build.yml  build.yml.j2  general_daily_security.yml  pr_cockpit-web.yaml  pr_cockpit-web.yml  pr_cockpit.yml  pr_docs.yml  pr_general.yml  pr_pre-commit.yml  pr_reviewdog.yaml  pr_reviewdog.yml  pr_stackablectl.yml  release_stackablectl.yaml  release_stackablectl.yml  reviewdog.yaml  web.yaml
bins/stackablectl/: Cargo.toml  README.md
bins/stackablectl/src/: cli.rs  constants.rs  lib.rs  main.rs  util.rs  utils.rs
bins/stackablectl/src/cli/: cluster_args.rs  mod.rs
bins/stackablectl/src/cmds/: cache.rs  completions.rs  demo.rs  mod.rs  operator.rs  release.rs  services.rs  stack.rs  stacklets.rs
bins/stackablectl/src/output/: mod.rs  progress.rs  result.rs
bins/stackablectl/tests/: demo.rs
bins/stackabled/: Cargo.toml  README.md  build.rs
bins/stackabled/src/: api_doc.rs  cli.rs  lib.rs  main.rs
bins/stackabled/src/handlers/: demos.rs  mod.rs  releases.rs  root.rs  stacklets.rs  stacks.rs  ui.rs  utoipa_synthetic.rs
bins/stackabled/src/middleware/: authentication.rs
bins/stackabled/src/middleware/authentication/: htpasswd.rs  mod.rs
bins/stackabled/web-ui/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
bins/stackabled/web-ui/src/: api.ts  main.tsx
bins/stackctl/: Cargo.toml
bins/stackctl/src/: cli.rs  constants.rs  main.rs
bins/stackctl/src/cmds/: cache.rs  completions.rs  demo.rs  demos.rs  mod.rs  operator.rs  release.rs  services.rs  stack.rs
bins/stackctl/src/utils/: files.rs  mod.rs  paths.rs
demos/: demos-v2-arg.yaml  demos-v2.yaml
docker/: Dockerfile
docs/: antora.yml
extra/completions/: _stackablectl  stackablectl.bash  stackablectl.elv  stackablectl.fish  stackablectl.nu
extra/man/: stackablectl.1
go-helm-wrapper/: main.go
nix/: meta.json  sources.json
rust/helm-sys/: Cargo.toml  README.md  build.rs
rust/helm-sys/go-helm-wrapper/: main.go
rust/helm-sys/src/: lib.rs
rust/stackable/: Cargo.toml
rust/stackable-cockpit/: Cargo.toml
rust/stackable-cockpit/src/: README.md  constants.rs  helm.rs  kube.rs  lib.rs  oci.rs
rust/stackable-cockpit/src/cluster/docker/: mod.rs
rust/stackable-cockpit/src/cluster/kind/: mod.rs
rust/stackable-cockpit/src/cluster/minikube/: mod.rs
rust/stackable-cockpit/src/common/: list.rs  manifest.rs  mod.rs
rust/stackable-cockpit/src/engine/: mod.rs
rust/stackable-cockpit/src/engine/docker/: mod.rs
rust/stackable-cockpit/src/engine/kind/: config.rs  mod.rs
rust/stackable-cockpit/src/engine/minikube/: mod.rs
rust/stackable-cockpit/src/platform/: cluster.rs  credentials.rs  manifests.rs  mod.rs  namespace.rs  product.rs  service.rs
rust/stackable-cockpit/src/platform/cluster/: mod.rs  resource_request.rs
rust/stackable-cockpit/src/platform/demo/: mod.rs  params.rs  spec.rs
rust/stackable-cockpit/src/platform/operator/: listener_operator.rs  mod.rs  spec.rs
rust/stackable-cockpit/src/platform/release/: mod.rs  spec.rs
rust/stackable-cockpit/src/platform/stack/: mod.rs  params.rs  spec.rs
rust/stackable-cockpit/src/platform/stacklet/: grafana.rs  minio.rs  mod.rs  opensearch.rs  prometheus.rs
rust/stackable-cockpit/src/utils/: chartsource.rs  check.rs  mod.rs  params.rs  path.rs  templating.rs  url.rs  yaml.rs
rust/stackable-cockpit/src/utils/k8s/: byte_string.rs  client.rs  conditions.rs  labels.rs  mod.rs  service.rs
rust/stackable-cockpit/src/xfer/: cache.rs  mod.rs  processor.rs
rust/stackable-cockpitd/: Cargo.toml  README.md
rust/stackable-cockpitd/src/: api_doc.rs  cli.rs  main.rs
rust/stackable-cockpitd/src/handlers/: demos.rs  mod.rs  releases.rs  stacklets.rs  stacks.rs  ui.rs  ui_disabled.rs
rust/stackable-cockpitd/src/middleware/authentication/: htpasswd.rs  mod.rs
rust/stackable/src/: constants.rs
rust/stackable/src/platform/release/: spec.rs
rust/stackablectl/: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
rust/stackablectl/src/: config.rs  constants.rs  lib.rs  main.rs  release_check.rs  utils.rs
rust/stackablectl/src/args/: cluster.rs  file.rs  mod.rs  namespace.rs  operator_configs.rs  prompt.rs  repo.rs
rust/stackablectl/src/cli/: cluster_args.rs  mod.rs
rust/stackablectl/src/cmds/: cache.rs  completions.rs  debug.rs  demo.rs  mod.rs  operator.rs  release.rs  stack.rs  stacklet.rs  stacklets.rs  version.rs
rust/stackablectl/src/cmds/control_center/: input_handling.rs  logging.rs  message.rs  mod.rs  rendering.rs  state.rs
rust/stackablectl/src/cmds/control_center/rendering/: mod.rs  stacklets.rs  tabs.rs
rust/stackablectl/src/output/: error.rs  mod.rs  progress.rs  result.rs
rust/stackablectl/src/output/templates/: error.tpl  result.tpl  result_success.tpl
rust/stackabled/: Cargo.toml
rust/stackabled/src/handlers/: root.rs
rust/xtask/: Cargo.toml
rust/xtask/src/: completions.rs  docs.rs  main.rs  man.rs  openapi.rs  readme.rs
rust/xtask/src/templates/: command.adoc.tpl
scripts/: verify_release_notes.sh
src/: README.md  constants.rs  helm.rs  kube.rs  lib.rs
src/cluster/: kind.rs  minikube.rs  mod.rs
src/common/: cached.rs  list.rs  manifest.rs  mod.rs
src/platform/: mod.rs  operator.rs  product.rs
src/types/: demo.rs  manifest.rs  mod.rs  param.rs  path_url.rs
src/utils/: check.rs  mod.rs  params.rs  path.rs  read.rs  string.rs  templating.rs
src/xfer/: cache.rs  mod.rs  (+2 more)
web/: .eslintignore  .eslintrc  .gitignore  .prettierignore  Cargo.toml  README.md  build.rs  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+156 files in other folders)
