[workspace]
members = ["rust/*", "web", "."]
resolver = "2"

[workspace.package]
# Currently we version stackablectl separately from the other tools in this repo,
# as we want to already ship a binary to enable easy testing.
# We need to decide on a versioning strategy (e.g. version stackable-cokpit
# using semver or use SDP releases) in the future. Once we have the decision
# we can consolidate the stackablectl version.
version = "0.0.0-dev"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/stackable-cockpit/"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.6", features = ["http2", "headers"] }
bcrypt = "0.15"
clap = { version = "4.2.1", features = ["derive", "env"] }
clap_complete = "4.2"
color-print = "0.3.5"
comfy-table = { version = "7.0", features = ["custom_styling"] }
directories = "5.0"
dotenvy = "0.15"
futures = "0.3"
gobuild = "0.1.0-alpha.2"
indexmap = { version = "2.0", features = ["serde"] }
k8s-openapi = { version = "0.20", default-features = false, features = ["v1_28"] }
kube = { version = "0.86", default-features = false, features = ["client", "rustls-tls"] }
lazy_static = "1.4"
once_cell = "1.18"
phf = "0.11"
phf_codegen = "0.11"
rand = "0.8"
regex = "1.9"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
snafu = "0.7"
spinoff = "0.8.0"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.55.0" }
tera = "1.18"
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
tower-http = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
utoipa = { version = "3.3", features = ["indexmap"] }
utoipa-swagger-ui = { version = "3.1", features = ["axum"] }
uuid = { version = "1.4.0", features = ["v4"] }
which = "4.4"

# [patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }

[profile.release.package.stackablectl]
# opt-level = "z" # We don't use that as the binary saving is not *that* big (think of 1MB) and it's not worth it risiking performance for this
strip = true
# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
# lto = true
codegen-units = 1
# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
# panic = "abort"
