[workspace]
members = ["rust/*", "web", "."]
resolver = "2"

[workspace.package]
# Currently we version stackablectl separately from the other tools in this repo,
# as we want to already ship a binary to enable easy testing.
# We need to decide on a versioning strategy (e.g. version stackable-cokpit
# using semver or use SDP releases) in the future. Once we have the decision
# we can consolidate the stackablectl version.
version = "0.0.0-dev"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/stackable-cockpit/"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
bcrypt = "0.15"
bindgen = "0.69.4"
cc = "1.0.83"
clap = { version = "4.2.1", features = ["derive", "env"] }
clap_complete = "4.2"
comfy-table = { version = "7.0", features = ["custom_styling"] }
directories = "5.0"
dotenvy = "0.15"
futures = "0.3"
indexmap = { version = "2.0", features = ["serde"] }
k8s-openapi = { version = "0.21", default-features = false, features = [
  "v1_29",
] }
kube = { version = "0.90", default-features = false, features = [
  "client",
  "rustls-tls",
  "ws",
] }
lazy_static = "1.4"
libc = "0.2.153"
once_cell = "1.18"
phf = "0.11"
phf_codegen = "0.11"
rand = "0.8"
regex = "1.9"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
rstest = "0.19"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
snafu = { version = "0.8", features = ["futures"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.67.0" }
tera = "1.18"
termion = "3.0.0"
tokio = { version = "1.29.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "process",
  "io-std",
] }
tower-http = { version = "0.5", features = ["validate-request"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
utoipa = { version = "4.2", features = ["indexmap"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
uuid = { version = "1.4.0", features = ["v4"] }
which = "6.0"

# [patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }

[profile.release.package.stackablectl]
# opt-level = "z" # We don't use that as the binary saving is not *that* big (think of 1MB) and it's not worth it risiking performance for this
strip = true
# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
# lto = true
codegen-units = 1
# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
# panic = "abort"
