[workspace]
members = ["rust/*", "web", "."]
resolver = "2"

[workspace.package]
# Currently we version stackablectl separately from the other tools in this repo,
# as we want to already ship a binary to enable easy testing.
# We need to decide on a versioning strategy (e.g. version stackable-cokpit
# using semver or use SDP releases) in the future. Once we have the decision
# we can consolidate the stackablectl version.
version = "0.0.0-dev"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
# We can use 2024 as soon as https://github.com/rust-lang/cc-rs/issues/1409 is
# fixed / supported.
edition = "2021"
repository = "https://github.com/stackabletech/stackable-cockpit/"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["http2"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
bcrypt = "0.19"
bindgen = "0.72"
built = "0.8"
cc = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
comfy-table = { version = "7.1", features = ["custom_styling"] }
dialoguer = "0.12.0"
directories = "6.0"
dotenvy = "0.15"
either = "1.15.0"
futures = "0.3"
indexmap = { version = "2.2", features = ["serde"] }
indicatif = "0.18"
lazy_static = "1.5"
libc = "0.2"
once_cell = "1.19"
phf = "0.13"
phf_codegen = "0.13"
rand = "0.10"
regex = "1.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = "0.23"
rstest = "0.26"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
snafu = { version = "0.9", features = ["futures"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.108.0", default-features = false, features = ["crds", "kube-ws"] }
tera = "1.20"
termion = "4.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "process", "io-std"] }
toml = { version = "1.0", features = ["serde"] }
tower-http = { version = "0.6", features = ["validate-request"] }
tracing = "0.1"
tracing-indicatif = "0.3.9"
tracing-subscriber = "0.3"
url = "2.5"
urlencoding = "2.1.3"
utoipa = { version = "5.4", features = ["indexmap"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.10", features = ["v4"] }
which = "8.0"

[patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }

[profile.release.package.stackablectl]
# opt-level = "z" # We don't use that as the binary saving is not *that* big (think of 1MB) and it's not worth it risiking performance for this
strip = true
# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
# lto = true
codegen-units = 1
# Cannot use because of https://github.com/rust-lang/cargo/issues/8264#issuecomment-751931213
# panic = "abort"
