[package]
name = "xtask"
version = "0.0.1"
edition = "2021"

[dependencies]
stackablectl = { path = "../bins/stackablectl" }
stackabled = { path = "../bins/stackabled" }
clap_complete =  { workspace = true }
snafu = { workspace = true }
clap.workspace = true
clap_mangen = "0.2.10"
serde_json.workspace = true
