[package]
name = "stackabled"
version = "0.0.1"
edition = "2021"

[features]
default = []
# The UI builds slowly, so run in API-only mode during development
ui = ["dep:stackabled-web"]

[dependencies]
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
axum = { workspace = true, features = ["http2", "headers"] }
utoipa = { workspace = true, features = ["axum_extras"] }
stackable = { path = "../../", features = ["openapi"] }
clap = { workspace = true, features = ["env"] }
tracing = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
stackabled-web = { path = "../../web", optional = true }
serde.workspace = true
k8s-openapi.workspace = true
