[package]
name = "stackctl"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/main.rs"

[dependencies]
clap_complete = { workspace = true }
thiserror = { workspace = true }
stackable = { path = "../../" }
dotenvy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }


