[package]
name = "helm-sys"
description = "Rust wrapper around Helm Go library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

links = "helm"

[build-dependencies]
bindgen.workspace = true
snafu.workspace = true
