[package]
name = "stackable-cockpit"
description = "Shared library which powers cockpitd and stackablectl"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[features]
full = ["openapi"]
openapi = ["dep:utoipa"]

[dependencies]
helm-sys = { path = "../helm-sys" }

bcrypt.workspace = true
indexmap.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
rand.workspace = true
reqwest.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
sha2.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
tera.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
utoipa = { workspace = true, optional = true }
which.workspace = true
futures.workspace = true

[dev-dependencies]
rstest.workspace = true
