[package]
name = "stackable-cockpitd"
version.workspace = true
edition = "2021"
publish = false

[features]
default = []
# The UI builds slowly, so run in API-only mode during development
ui = ["dep:stackable-cockpit-web"]

[dependencies]
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
axum = { workspace = true, features = ["http2", "headers"] }
utoipa = { workspace = true, features = ["axum_extras"] }
stackable-cockpit = { path = "../stackable-cockpit", features = ["openapi"] }
clap = { workspace = true, features = ["env"] }
tracing = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
stackable-cockpit-web = { path = "../../web", optional = true }
serde.workspace = true
k8s-openapi.workspace = true
tower-http = { version = "0.4.1", features = ["validate-request"] }
bcrypt = "0.14.0"
uuid = { version = "1.4.0", features = ["v4"] }
futures = "0.3.28"
