[package]
name = "stackable-cockpitd"
description = "Stackable cockpit daemon (rest api) + (optional) website for cockpit"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[features]
default = []
# The UI builds slowly, so run in API-only mode during development
ui = ["dep:stackable-cockpit-web"]

[dependencies]
stackable-cockpit = { path = "../stackable-cockpit", features = ["openapi"] }
stackable-cockpit-web = { path = "../../web", optional = true }

axum.workspace = true
bcrypt.workspace = true
clap.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
