[package]
name = "stackable-cockpitd"
description = "Stackable cockpit daemon bundling the HTTP REST API"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-cockpit = { path = "../stackable-cockpit", features = ["openapi"] }

axum.workspace = true
axum-extra.workspace = true
bcrypt.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
