[package]
name = "stackablectl"
description = "Command line tool to interact with the Stackable Data Platform"
# See <project-root>/Cargo.toml
version = "1.0.0-rc3"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-cockpit = { path = "../stackable-cockpit", features = ["openapi"] }

clap_complete.workspace = true
clap.workspace = true
comfy-table.workspace = true
directories.workspace = true
dotenvy.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
nu-ansi-term.workspace = true
rand.workspace = true
reqwest.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
