[package]
name = "stackablectl"
description = "Command line tool to interact with the Stackable Data Platform"
# See <project-root>/Cargo.toml
version = "1.2.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-cockpit = { path = "../stackable-cockpit", features = ["openapi"] }
stackable-operator.workspace = true

clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap.workspace = true
comfy-table.workspace = true
directories.workspace = true
dotenvy.workspace = true
indexmap.workspace = true
lazy_static.workspace = true
rand.workspace = true
reqwest.workspace = true
semver.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
snafu.workspace = true
tera.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
futures.workspace = true
indicatif.workspace = true
termion.workspace = true
urlencoding.workspace = true
libc.workspace = true

[build-dependencies]
built.workspace = true
