[package]
name = "xtask"
version.workspace = true
edition = "2021"

[dependencies]
stackablectl = { path = "../stackablectl" }
stackabled = { path = "../stackable-cockpitd", package = "stackable-cockpitd" }
clap_complete =  { workspace = true }
snafu = { workspace = true }
clap.workspace = true
clap_mangen = "0.2.10"
serde_json.workspace = true
