[package]
name = "xtask"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
stackablectl = { path = "../stackablectl" }
stackable-cockpitd = { path = "../stackable-cockpitd" }
clap_complete =  { workspace = true }
snafu = { workspace = true }
clap.workspace = true
clap_mangen = "0.2.10"
serde_json.workspace = true
