[package]
name = "xtask"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
clap_complete = { workspace = true }
clap_mangen = "0.2.10"
clap.workspace = true
once_cell.workspace = true
regex.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-cockpitd = { path = "../stackable-cockpitd" }
stackablectl = { path = "../stackablectl" }
tera.workspace = true
